--- a/CGA/css/style.css
+++ b/CGA/css/style.css
@@ -15,13 +15,15 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    background-color: rgb(242, 242, 242);
 }
 
-a{
+a {
     text-decoration: none;
     color: #000;
     display: inline-block;
 }
+
 #menu-control {
     display: none;
 }
@@ -36,6 +38,7 @@ a{
     top: 0;
     z-index: 3;
 }
+
 .header-fixed .bg {
     position: absolute;
     left: -100px;
@@ -107,9 +110,6 @@ a{
 
 
 
-.main-header h1 {
-    margin: auto;
-}
 
 .hb,
 .main-nav .nav-close {
@@ -131,22 +131,10 @@ a{
     display: flex;
     left: 0;
 }
-.main-nav {
-    position: absolute;
-    width: 75%;
-    height: 100vh;
-    top: 0;
-    left: -100%;
-    z-index: 3;
-    transition: left .7s;
-    background-color: #fff;
-    flex-direction: column;
-    padding-left: 25px;
-    overflow: auto;
-   
-}
 
-.main-nav>*{
+
+
+.main-nav>* {
     flex-shrink: 0;
 }
 
@@ -175,69 +163,142 @@ a{
     background-color: #000;
 }
 
-.main-nav ul{
+.main-nav ul {
     padding-left: 0;
     margin-bottom: 0;
 }
 
 
-.main-nav{
+.main-nav {
     font-size: 18px;
-    
+
 }
 
 .main-nav>a,
 .main-nav .drop-down,
-.main-nav .drop-down a{
+.main-nav .drop-down a {
     padding: 5px 0;
 }
 
-.main-nav .drop-down input[type="checkbox"]{
+.main-nav .drop-down input[type="checkbox"] {
     display: none;
 }
 
-.main-nav .drop-down ul li{
-    padding-left: 15px;
-
-}
-
-.main-nav a:hover{
+.main-nav a:hover {
     color: rgb(25, 137, 55);
 }
-.main-nav .drop-down label{
+
+.main-nav .drop-down label {
     cursor: pointer;
     user-select: none;
 }
 
-.drop-down label span{
+.drop-down label span {
     display: inline-block;
     padding-right: 5px;
 }
 
-.drop-down .fas{
-    display: inline-block;
-    transform-origin: center center;
-    transform:  rotate(180deg);
-    transition: .3s;
 
+@media screen and (min-width:768px) {
+
+    .main-nav .nav-close,
+    .hb {
+        display: none;
+    }
+
+    .main-nav {
+        flex-direction: row;
+        display: flex;
+        margin-left: auto;
+
+    }
+
+    .main-nav>a, .main-nav .drop-down {
+        position: relative;
+        padding: 0 10px;
+    }
+
+    .main-nav .drop-down ul {
+        max-height: 0;
+        overflow: hidden;
+        position: absolute;
+
+
+    }
+
+    .main-nav .drop-down ul a {
+        display: block;
+    }
+
+    .main-nav .drop-down:hover ul {
+        max-height: 1000px;
+        position: absolute;
+        background: #fff;
+        padding: 20px;
+        right: 0;
+        width: 150px;
+        transition: .5s;
+    }
+}
+
+/* 手機 */
+
+@media screen and (max-width:767.98px) {
+
+    .main-header h1 {
+        margin: auto;
+    }
+
+    #shop-check:checked~.road-shop-list,
+    #member-check:checked~.member-list {
+        max-height: 1000px;
+    }
+
+    #shop-check:checked~.shop-control .fas,
+    #member-check:checked~.member-control .fas {
+        transform: rotate(0deg);
+    }
+
+    .main-nav {
+        position: absolute;
+        width: 75%;
+        height: 100vh;
+        top: 0;
+        left: -100%;
+        z-index: 3;
+        transition: left .7s;
+        background-color: #fff;
+        flex-direction: column;
+        padding-left: 25px;
+        overflow: auto;
+
+    }
+
+    .main-nav .drop-down ul li {
+        padding-left: 15px;
+
+    }
+
+
+
+
+
+
+    .drop-down .fas {
+        display: inline-block;
+        transform-origin: center center;
+        transform: rotate(180deg);
+        transition: .3s;
+
+
+    }
+
+    .drop-down .road-shop-list,
+    .drop-down .member-list {
+        max-height: 0;
+        overflow: hidden;
+        transition: .5s;
+
+    }
 
 }
-.drop-down .road-shop-list,
-.drop-down .member-list{
-    max-height: 0;
-    overflow: hidden;
-    transition: .5s;
-   
-}
-
-#shop-check:checked ~.road-shop-list,
-#member-check:checked ~.member-list{
-    max-height: 1000px;
-}
-
-#shop-check:checked ~ .shop-control .fas,
-#member-check:checked ~ .member-control .fas{
-    transform: rotate(0deg);
-}
-
-
