--- a/CGA/css/index.css
+++ b/CGA/css/index.css
@@ -1,21 +1,195 @@
-.yt{
+.yt {
     aspect-ratio: 16/9;
 }
-.yt h2{
+
+.yt h2,
+.main-footer h2 {
     width: 1px;
     height: 1px;
     position: absolute;
     font-size: 1px;
     overflow: hidden;
-    
+
 }
-.yt iframe{
+
+.yt iframe {
     width: 100%;
     height: 100%;
 }
 
+.cga-description {
+    padding: 50px 0;
+}
+
+.cga-description h2 {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.cga-description h3 {
+    margin-bottom: 20px;
+    font-size: 26px;
+}
+
+.cga-description p {
+    font-size: 16px;
+    font-weight: normal;
+}
+
+.cga-description .pic {
+    height: 100%;
+}
+
+.cga-description .pic img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/*  */
+.cga-fun {
+    padding: 50px 0;
+}
+
+.cga-fun h2 {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.cga-fun .card {
+    display: flex;
+    overflow: hidden;
+    border-radius: 10px;
+    height: 100%;
+}
+
+.cga-fun .card .txt {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    height: 100%;
+    order: 1;
+}
+
+.cga-fun .card .txt h3 {
+    font-weight: normal;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.cga-fun .card .txt a {
+    margin-top: auto;
+    align-self: flex-end;
+}
+
+.cga-fun .card .txt a:hover {
+    color: rgb(25, 137, 55);
+}
+
+.cga-fun .card .txt a:hover .fas {
+    transition: .3s;
+    transform: translateX(8px);
+}
+
+.cga-fun .card .txt a .fas {
+    display: inline-block;
+    margin-left: 5px;
+}
+
+.cga-fun .card .pic {}
+
+.cga-fun .card .pic img {
+    width: 100%;
+}
+
+.cga-fun .stamp-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px 0;
+}
+
+.cga-fun .stamp-list .stamp {
+    width: calc(20% - 20px);
+    margin: 0 10px 25px;
+    background-color: rgb(242, 242, 242);
+    border-radius: 50%;
+    border: 5px solid #fff;
+}
+
+.cga-fun .stamp-list .stamp img {
+    width: 100%;
+    mix-blend-mode: multiply;
+    box-sizing: border-box;
+    background-color: rgb(242, 242, 242);
+
+}
+
+.main-footer {
+    display: flex;
+    flex-direction: column;
+    background-color: #F6EDE2;
+    border-top: 2px solid #D5A273;
+}
+
+.main-footer .info {
+    display: flex;
+    padding: 30px 8px;
+    font-size: 16px;
+}
+
+.main-footer .info h3 {
+    font-weight: bold;
+    font-size: 16px;
+    display: inline-block;
+    border-bottom: 2px solid #000;
+}
+
+.main-footer .info ul {
+    padding: 0;
+    margin: 0;
+}
+
+.main-footer .info ul li{
+ padding: 5px 0;
+}
+
+.main-footer .info ul li a{
+    font-weight: 100;
+    color: #666;
+}
+
+.main-footer .info ul li a:hover{
+    color: #000;
+}
+
+.copyright {
+    font-weight: normal;
+    font-size: 16px;
+    color: #fff;
+    padding: 30px 0;
+    background-color: #000;
+    text-align: center;
+}
+
+.copyright span {
+    color: red;
+}
+
+
 @media screen and (max-width:767.98px) {
-    .yt{
+    .cga-fun .stamp-list .stamp {
+        width: calc(50% - 20px);
+    }
+
+    .cga-fun .card {
+        margin-bottom: 40px;
+    }
+
+    .cga-fun .card .txt h3 {
+        font-size: 18px;
+    }
+
+    .yt {
         padding: 0;
     }
 }
