--- a/CGA/css/index.css
+++ b/CGA/css/index.css
@@ -133,7 +133,7 @@
 
 .main-footer .info {
     display: flex;
-    padding: 30px 8px;
+    padding: 30px 15px;
     font-size: 16px;
 }
 
@@ -163,10 +163,10 @@
 }
 
 .copyright {
-    font-weight: normal;
+    font-weight: 100;
     font-size: 16px;
     color: #fff;
-    padding: 30px 0;
+    padding: 15px 0;
     background-color: #000;
     text-align: center;
 }
