--- a/CGA/css/index.css
+++ b/CGA/css/index.css
@@ -28,7 +28,7 @@
 
 .cga-description h3 {
     margin-bottom: 20px;
-    font-size: 26px;
+    font-size: 20px;
 }
 
 .cga-description p {
@@ -48,7 +48,7 @@
 
 /*  */
 .cga-fun {
-    padding: 50px 0;
+    padding-bottom: 50px 0;
 }
 
 .cga-fun h2 {
@@ -96,7 +96,6 @@
     margin-left: 5px;
 }
 
-.cga-fun .card .pic {}
 
 .cga-fun .card .pic img {
     width: 100%;
@@ -118,7 +117,7 @@
 
 .cga-fun .stamp-list .stamp img {
     width: 100%;
-    mix-blend-mode: multiply;
+    border-radius: 50%;
     box-sizing: border-box;
     background-color: rgb(242, 242, 242);
 
@@ -191,5 +190,9 @@
 
     .yt {
         padding: 0;
+    }
+
+    .copyright {
+        font-size: 14px;
     }
 }
