--- a/CGA/css/style.css
+++ b/CGA/css/style.css
@@ -15,7 +15,6 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: rgb(242, 242, 242);
 }
 
 a {
@@ -166,6 +165,15 @@ a {
     padding-right: 5px;
 }
 
+.main-footer h2 {
+    width: 1px;
+    height: 1px;
+    position: absolute;
+    font-size: 1px;
+    overflow: hidden;
+
+}
+
 
 .go-top {
     text-align: center;
@@ -244,6 +252,63 @@ a {
 
 }
 
+
+.main-footer {
+    display: flex;
+    flex-direction: column;
+    background-color: #F6EDE2;
+    border-top: 2px solid #D5A273;
+    margin-top: auto;
+}
+
+.main-footer .info {
+    display: flex;
+    padding: 30px 15px;
+    font-size: 16px;
+}
+
+.main-footer .info h3 {
+    font-weight: bold;
+    font-size: 16px;
+    display: inline-block;
+    border-bottom: 2px solid #000;
+}
+
+.main-footer .info ul {
+    padding: 0;
+    margin: 0;
+}
+
+.main-footer .info ul li{
+ padding: 5px 0;
+}
+
+.main-footer .info ul li a{
+    font-weight: 100;
+    color: #666;
+}
+
+.main-footer .info ul li a:hover{
+    color: #000;
+}
+
+.copyright { 
+    color: #fff;
+    padding: 15px 0;
+    background-color: #000;
+}
+
+.copyright h2{
+    font-weight: 100;
+    font-size: 16px;
+    text-align: center;
+}
+
+.copyright span {
+    color: red;
+}
+
+
 /* 手機 */
 
 @media screen and (max-width:767.98px) {
@@ -294,6 +359,10 @@ a {
         max-height: 0;
         overflow: hidden;
         transition: .5s;
+    }
+
+    .copyright {
+        font-size: 14px;
     }
 
 }
