--- a/CGA/css/landscape.css
+++ b/CGA/css/landscape.css
@@ -1,5 +1,5 @@
 .main-banner,
-.main-banner .main-des, 
+.main-banner .main-des,
 .main-banner .main-pic {
     padding: 0;
 }
@@ -7,9 +7,11 @@
 img {
     width: 100%;
 }
-.main-banner{
+
+.main-banner {
     margin-bottom: 30px;
 }
+
 .main-banner h2 {
     padding: 50px 0;
 }
@@ -20,49 +22,70 @@ img {
     align-items: center;
     justify-content: center;
 }
+
 .main-banner .main-des .des {
     width: 80%;
     padding: 30px 0;
 }
 
-.main-banner .main-des .des h3{
+.main-banner .main-des .des h3 {
     font-size: 20px;
     margin-bottom: 30px;
 }
-.main-banner .main-des .des p{}
 
-.culture{
+.main-banner .main-des .des p {}
+
+.culture {
     margin-bottom: 30px;
 }
-.culture h2{
-    padding: 50px 0;
+
+.culture h2 {
+    padding: 30px 0 20px;
 }
 
-.culture .main-des{
+.culture .main-pic {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.culture .main-des h3{
-   font-size: 20px;
+
+.culture .main-des {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.culture .main-des h3 {
+    font-size: 20px;
+    padding: 0 20px;
     margin-bottom: 30px;
+}
+
+.culture .main-des p {
+    padding: 0 20px;
 }
 
 
 @media screen and (max-width:768px) {
 
-    .main-des{
+    .main-des {
         text-align: center;
     }
-   .main-banner {
-        padding:0 0 30px;
+
+    .main-banner {
+        padding: 0 0 30px;
         margin-bottom: 0;
     }
+
     .culture .main-des {
         text-align: center;
     }
-    .culture .pic{
+
+    .culture .main-des h3 {
+        margin-bottom: 10px;
+    }
+
+    .culture .pic {
         margin-bottom: 30px;
     }
 }
-
