--- a/CGA/css/landscape.css
+++ b/CGA/css/landscape.css
@@ -28,10 +28,11 @@ img {
     justify-content: center;
 }
 
-.main-banner .main-des .des {
+.main-banner .main-des .des{
     width: 80%;
-    padding: 30px 0;
 }
+
+
 
 .main-banner .main-des .des h3 {
     font-size: 20px;
@@ -60,16 +61,17 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .culture .main-des h3 {
     font-size: 20px;
-    padding: 0 20px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .culture .main-des p {
-    padding: 0 20px;
+
     font-weight: 300;
 
 }
@@ -80,14 +82,43 @@ img {
         font-size: 20px;
     }
 
-    .main-banner .main-des .des  h3,
-    .culture .main-des h3  {
+    .main-banner .main-des {
+        padding: 30px;
+    }
+    .main-banner .main-des .des{
+        width: auto;
+    }
+    .main-banner .main-des .des h3 {
+        text-align: center;
         font-size: 18px;
-        margin-bottom: 10px;
     }
 
-    .main-des {
-        text-align: center;
+
+    .culture h2 {
+        order: -1;
+        padding-bottom: 10px;
+    }
+
+    .culture .main-des {
+        order: 0;
+    }
+
+    .culture .main-des h3 {
+
+        position: absolute;
+        height: 1px;
+        width: 1px;
+        overflow: hidden;
+    }
+
+    .culture .main-des p {
+        text-align: left;
+
+        padding: 0;
+    }
+
+    .culture .main-pic {
+        order: 1;
     }
 
     .main-banner {
@@ -98,8 +129,6 @@ img {
     .culture .main-des {
         text-align: center;
     }
-
- 
 
     .culture .pic {
         margin-bottom: 30px;
