--- a/CGA/css/landscape.css
+++ b/CGA/css/landscape.css
@@ -71,9 +71,7 @@ img {
 }
 
 .culture .main-des p {
-
     font-weight: 300;
-
 }
 
 
@@ -91,6 +89,7 @@ img {
     .main-banner .main-des .des h3 {
         text-align: center;
         font-size: 18px;
+        margin-bottom: 10px;
     }
 
 
@@ -103,7 +102,7 @@ img {
         order: 0;
     }
 
-    .culture .main-des h3 {
+    .culture  h2 {
 
         position: absolute;
         height: 1px;
