--- a/CGA/css/landscape.css
+++ b/CGA/css/landscape.css
@@ -79,9 +79,10 @@ img {
     h2 {
         font-size: 20px;
     }
-
+    
+    .culture .main-des,
     .main-banner .main-des {
-        padding: 30px;
+        padding: 20px;
     }
     .main-banner .main-des .des{
         width: auto;
@@ -99,6 +100,7 @@ img {
     }
 
     .culture .main-des {
+       
         order: 0;
     }
 
@@ -121,7 +123,7 @@ img {
     }
 
     .main-banner {
-        padding: 0 0 30px;
+     
         margin-bottom: 0;
     }
 
