--- a/CGA/css/style.css
+++ b/CGA/css/style.css
@@ -91,7 +91,7 @@ a {
 
 .main-nav {
     font-weight: 300;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .hb,
@@ -172,6 +172,7 @@ a {
     position: absolute;
     font-size: 1px;
     overflow: hidden;
+    left: -100000px;
 
 }
 
