--- a/CGA/css/index.css
+++ b/CGA/css/index.css
@@ -3,22 +3,8 @@ body{
 
 }
 
-.yt {
-    aspect-ratio: 16/9;
-}
-
-.yt h2{
-    width: 1px;
-    height: 1px;
-    position: absolute;
-    font-size: 1px;
-    overflow: hidden;
-
-}
-
-.yt iframe {
-    width: 100%;
-    height: 100%;
+.banner .col-12{
+   padding: 0;
 }
 
 .cga-description {
